--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
           <div class="row text-center">
   		<h1 class="title">Evan's Lake Cottage</h1>
   	</div>
-        <nav class="navbar">
+        <nav class="navbar-inverse">
           <div class="container-fluid">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
