Added full width fuckin cats

--- a/home.html
+++ b/home.html
@@ -72,32 +72,32 @@
 	  <!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
 		<div class="item active">
-			<div class="container">
+			<div class="">
 				<div class="row text-center">
-			  		<img src="img/cat1.jpg" alt="...">
+			  		<img src="img/cat1_wide.png" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
-			    <h3>Fucking Cat</h3>
+			    <h1>Cat</h1>
 			  </div>
 			</div>
 		</div>
 		<div class="item">
-			<div class="container">
+			<div class="">
 				<div class="row text-center">
-			  		<img height="475" src="img/cat2.jpg" alt="...">
-			  	</div>
-			  <div class="carousel-caption">
-			    <h3>Fucking Easter Cat</h3>
-			  </div>
-			</div>
-		</div>
-		<div class="item">
-			<div class="container">
-				<div class="row text-center">
-			  		<img height="475" src="img/cat3.jpeg" alt="...">
+			  		<img src="img/cat2_wide.png" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
 			    <h3>Another Fucking Cat</h3>
+			  </div>
+			</div>
+		</div>
+		<div class="item">
+			<div class="">
+				<div class="row text-center">
+			  		<img src="img/cat3_wide.png" alt="...">
+			  	</div>
+			  <div class="carousel-caption">
+			    <h3>Fucking Grumpy Cat</h3>
 			  </div>
 			</div>
 		</div>				
