--- a/gallery.html
+++ b/gallery.html
@@ -47,9 +47,9 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="home.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="availability.html">Availability & Price</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li class="active"><a href="gallery.html">Gallery</a></li>
                 <li><a href="location.html">Location</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
