Added pics. May have broken carousel...

--- a/home.html
+++ b/home.html
@@ -74,33 +74,43 @@
 		<div class="item active">
 			<div class="">
 				<div class="row text-center">
-			  		<img src="img/cat1_wide.png" alt="...">
+			  		<img src="img/bailey_wide.png" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
-			    <h1>Cat</h1>
+			    <h1>Bailey...LIKE A BAWSS</h1>
 			  </div>
 			</div>
 		</div>
 		<div class="item">
 			<div class="">
 				<div class="row text-center">
-			  		<img src="img/cat2_wide.png" alt="...">
+			  		<img src="img/bw_wide.png" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
-			    <h3>Another Fucking Cat</h3>
+			    <h3>It's a fucking bedroom</h3>
 			  </div>
 			</div>
 		</div>
 		<div class="item">
 			<div class="">
 				<div class="row text-center">
-			  		<img src="img/cat3_wide.png" alt="...">
+			  		<img src="img/gbr_wide.png" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
-			    <h3>Fucking Grumpy Cat</h3>
+			    <h3>...and another fucking bedroom</h3>
 			  </div>
 			</div>
-		</div>				
+		</div>	
+    <div class="item">
+      <div class="">
+        <div class="row text-center">
+            <img src="img/lake1_wide.png" alt="...">
+          </div>
+        <div class="carousel-caption">
+          <h3>shitty lake</h3>
+        </div>
+      </div>
+    </div>	
 	</div>
 
   <!-- Controls -->
@@ -121,22 +131,22 @@
     ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="container marketing">
+<div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
 	<div class="row">
         <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <h2>Lakefront Relaxation</h2>
+          <p>Relax in this beautiful lakefront cottage with Evan’s Lake outside your front door. The hree bedroom, two bath home that can sleep up to 10 people. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Heading</h2>
+          <h2>Amenities</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Heading</h2>
+          <h2>Attractions</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
@@ -149,8 +159,8 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Lakefront Relaxation <span class="text-muted">Evan's Lake Michigan</span></h2>
+          <p class="lead">Relax in this beautiful lakefront cottage with Evan’s Lake outside your front door. </p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
