Changed some wording

--- a/home.html
+++ b/home.html
@@ -67,6 +67,7 @@
 	    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="3"></li>
 	  </ol>
 
 	  <!-- Wrapper for slides -->
@@ -107,7 +108,7 @@
             <img src="img/lake1_wide.png" alt="...">
           </div>
         <div class="carousel-caption">
-          <h3>shitty lake</h3>
+          <h3>It's a lake...</h3>
         </div>
       </div>
     </div>	
