Added some basic page content

--- a/home.html
+++ b/home.html
@@ -48,9 +48,10 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="home.html">Home</a></li>
-                <li><a href="availability.html">Availability & Price</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="location.html">Location</a></li>
+                <li><a href="amenities.html">Amenities</a></li>
+                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="rates.html">Rates and Rental Info</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -67,7 +68,6 @@
 	    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="3"></li>
 	  </ol>
 
 	  <!-- Wrapper for slides -->
@@ -78,7 +78,7 @@
 			  		<img src="img/bailey_wide.png" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
-			    <h1>Bailey...LIKE A BAWSS</h1>
+			    <h1></h1>
 			  </div>
 			</div>
 		</div>
@@ -88,7 +88,7 @@
 			  		<img src="img/bw_wide.png" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
-			    <h3>It's a fucking bedroom</h3>
+			    <h3></h3>
 			  </div>
 			</div>
 		</div>
@@ -98,7 +98,7 @@
 			  		<img src="img/gbr_wide.png" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
-			    <h3>...and another fucking bedroom</h3>
+			    <h3></h3>
 			  </div>
 			</div>
 		</div>	
@@ -108,7 +108,7 @@
             <img src="img/lake1_wide.png" alt="...">
           </div>
         <div class="carousel-caption">
-          <h3>It's a lake...</h3>
+          <h3></h3>
         </div>
       </div>
     </div>	
@@ -136,35 +136,17 @@
 
       <!-- Three columns of text below the carousel -->
 	<div class="row">
-        <div class="col-lg-4">
-          <h2>Lakefront Relaxation</h2>
-          <p>Relax in this beautiful lakefront cottage with Evan’s Lake outside your front door. The hree bedroom, two bath home that can sleep up to 10 people. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Amenities</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Attractions</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-
-
       <!-- START THE FEATURETTES -->
 
       <hr class="featurette-divider">
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">Lakefront Relaxation <span class="text-muted">Evan's Lake Michigan</span></h2>
-          <p class="lead">Relax in this beautiful lakefront cottage with Evan’s Lake outside your front door. </p>
+          <h2 class="featurette-heading">Lakefront Relaxation <span class="text-muted">Evan's Lake, Michigan</span></h2>
+          <p class="lead">Relax in a beautiful lakefront cottage with Evan’s Lake outside your front door. This three bedroom, two bath home can sleep up to 8 people. The Lake home boasts all the amenities you would expect in your own home. The master suite has a full bath with a balcony offering views of the entire lake. The second bedroom has a view of the lake with a king size bed. The third bedroom has a queen size bed, full size bed and a small crib.</p><a class="btn btn-default" href="#" role="button">More details &raquo;</a>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/lake1_wide.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -172,11 +154,11 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Attractions <span class="text-muted">The best of Southeastern Michigan</span></h2>
+          <p class="lead">Situated in the Irish Hills area, Evan's Lake is a short drive away from a host of activities. Golf, dining, and a number of family-friendly activities are only minutes away. Located on US-12, Evan's lake is minutes away from Michigan International Speedway and mere 45-minutes away from Ann Arbor, MI.</p><a class="btn btn-default" href="#" role="button">More details &raquo;</a>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/golf.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -184,11 +166,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Amenities <span class="text-muted">A home away from home.</span></h2>
+          <p class="lead">The home has a washer and dryer. Linens and towels are included. The kitchen has a microwave, coffee maker, dishes, silver and pots and pans. Outside there is a Weber grill, table and chairs, a glider on the porch and a outdoor sofa and chair on the balcony. Enjoy the out door air with a fire pit wood and marsh mellow sticks. There is cable and WiFi also. Easy access to the cottage and lake. All you need to bring is a bag of groceries.</p><a class="btn btn-default" href="#" role="button">More Details &raquo;</a>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/kitchen1_small.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -200,7 +182,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2014 evanslakecottage.com &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
