--- a/rates.html
+++ b/rates.html
@@ -48,10 +48,10 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="home.html">Home</a></li>
-                <li class="active"><a href="gallery.html">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="amenities.html">Amenities</a></li>
                 <li><a href="attractions.html">Attractions</a></li>
-                <li><a href="rates.html">Rates and Rental Info</a></li>
+                <li class="active"><a href="rates.html">Rates and Rental Info</a></li>
                 <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -60,18 +60,33 @@
     </div>
 
     <!-- CONTENT -->
-    <div class="container">
-      <h1>Gallery and Stuff</h1>
+<div class="container">
 
-
-
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer>
-
-    </div><!-- /.container -->
+  <h1>Rates</h1>
+  <h3>All Reservations</h3>
+  <ul>
+    <li>Refundable Security Deposit/ Reservation Fee $500.00 per reservation</li>
+    <li>Refundable after inspection of property.</li>
+  </ul>
+  <h3>Weekly</h3>
+  <ul>
+    <li>Cottage weekly rental  $1000.00</li>
+    <li>Weeks are Friday to Friday</li>
+    <li>Arrival after 5:00 pm on Friday</li>
+    <li>Departure 10:00 AM on Friday</li>
+    <li>Holiday weeks will be more.</li>
+    <li>We ask that you leave the cottage “broom" clean and that you notify us about anything that may happen so we can take care of it immediately, for your convenience and ours.</li>
+  </ul>
+  <h3>Pontoon Rental</h3>
+  <ul>
+    <li>$500 for the week</li>
+  </ul>
+  <!-- FOOTER -->
+  <footer>
+    <p class="pull-right"><a href="#">Back to top</a></p>
+    <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
+</div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
