--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,10 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li><a href="home.html">Home</a></li>
-                <li><a href="availability.html">Availability & Price</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="location.html">Location</a></li>
+                <li><a href="amenities.html">Amenities</a></li>
+                <li><a href="attractions.html">Attractions</a></li>
+                <li><a href="rates.html">Rates and Rental Info</a></li>
                 <li class="active"><a href="contact.html">Contact</a></li>
               </ul>
             </div>
@@ -60,10 +61,9 @@
 
     <!-- CONTENT -->
     <div class="container">
-      <h1>Contacts and Stuff</h1>
-
-
-
+      <h1>Contact</h1>
+      Email: <a href="mailto:evanslakecottage@gmail.com">evanslakecottage@gmail.com</a>
+      <p></p>
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
