Added Gallery with modal popup

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Evan's Lake Cottage</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -72,16 +72,6 @@
 
 	  <!-- Wrapper for slides -->
 	<div class="carousel-inner" role="listbox">
-		<div class="item active">
-			<div class="">
-				<div class="row text-center">
-			  		<img src="img/bailey_wide.png" alt="...">
-			  	</div>
-			  <div class="carousel-caption">
-			    <h1></h1>
-			  </div>
-			</div>
-		</div>
 		<div class="item">
 			<div class="">
 				<div class="row text-center">
@@ -101,17 +91,17 @@
 			    <h3></h3>
 			  </div>
 			</div>
-		</div>	
-    <div class="item">
+    </div>
+    <div class="item active">
       <div class="">
         <div class="row text-center">
-            <img src="img/lake1_wide.png" alt="...">
+            <img src="img/bailey_wide.png" alt="...">
           </div>
         <div class="carousel-caption">
-          <h3></h3>
+          <h1></h1>
         </div>
       </div>
-    </div>	
+    </div>
 	</div>
 
   <!-- Controls -->
@@ -143,7 +133,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Lakefront Relaxation <span class="text-muted">Evan's Lake, Michigan</span></h2>
-          <p class="lead">Relax in a beautiful lakefront cottage with Evan’s Lake outside your front door. This three bedroom, two bath home can sleep up to 8 people. The Lake home boasts all the amenities you would expect in your own home. The master suite has a full bath with a balcony offering views of the entire lake. The second bedroom has a view of the lake with a king size bed. The third bedroom has a queen size bed, full size bed and a small crib.</p><a class="btn btn-default" href="#" role="button">More details &raquo;</a>
+          <p class="lead">Relax in a beautiful lakefront cottage with Evan’s Lake outside your front door. This three bedroom, two bath home can sleep up to 8 people. The Lake home boasts all the amenities you would expect in your own home. The master suite has a full bath with a balcony offering views of the entire lake. The second bedroom has a view of the lake with a king size bed. The third bedroom has a queen size bed, full size bed and a small crib.</p><a class="btn btn-default" href="gallery.html" role="button">More details &raquo;</a>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="img/lake1_wide.png" alt="Generic placeholder image">
@@ -155,7 +145,7 @@
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
           <h2 class="featurette-heading">Attractions <span class="text-muted">The best of Southeastern Michigan</span></h2>
-          <p class="lead">Situated in the Irish Hills area, Evan's Lake is a short drive away from a host of activities. Golf, dining, and a number of family-friendly activities are only minutes away. Located on US-12, Evan's lake is minutes away from Michigan International Speedway and mere 45-minutes away from Ann Arbor, MI.</p><a class="btn btn-default" href="#" role="button">More details &raquo;</a>
+          <p class="lead">Situated in the Irish Hills area, Evan's Lake is a short drive away from a host of activities. Golf, dining, and a number of family-friendly activities are only minutes away. Located on US-12, Evan's lake is close to Michigan International Speedway and mere 45-minutes away from Ann Arbor, MI.</p><a class="btn btn-default" href="attractions.html" role="button">More details &raquo;</a>
         </div>
         <div class="col-md-5 col-md-pull-7">
           <img class="featurette-image img-responsive center-block" src="img/golf.png" alt="Generic placeholder image">
@@ -167,7 +157,7 @@
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Amenities <span class="text-muted">A home away from home.</span></h2>
-          <p class="lead">The home has a washer and dryer. Linens and towels are included. The kitchen has a microwave, coffee maker, dishes, silver and pots and pans. Outside there is a Weber grill, table and chairs, a glider on the porch and a outdoor sofa and chair on the balcony. Enjoy the out door air with a fire pit wood and marsh mellow sticks. There is cable and WiFi also. Easy access to the cottage and lake. All you need to bring is a bag of groceries.</p><a class="btn btn-default" href="#" role="button">More Details &raquo;</a>
+          <p class="lead">The home has a washer and dryer. Linens and towels are included. The kitchen has a microwave, coffee maker, dishes, silver and pots and pans. Outside there is a Weber grill, table and chairs, a glider on the porch and a outdoor sofa and chair on the balcony. Enjoy the out door air with a fire pit wood and marsh mellow sticks. There is cable and WiFi also. Easy access to the cottage and lake. All you need to bring is a bag of groceries.</p><a class="btn btn-default" href="amenities.html" role="button">More Details &raquo;</a>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive center-block" src="img/kitchen1_small.png" alt="Generic placeholder image">
