--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,9 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
+    <!-- Ekko Lightbox for Gallery -->
+    <link href="css/ekko-lightbox.css" rel="stylesheet">
+
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="js/ie-emulation-modes-warning.js"></script>
@@ -61,17 +64,75 @@
 
     <!-- CONTENT -->
     <div class="container">
-      <h1>Gallery and Stuff</h1>
-
-
-
+      <h1>Gallery</h1>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Living Room" data-toggle="lightbox" href="img/lr_2.png">
+              <img class="img-responsive" src="img/lr_2.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Living Room" data-toggle="lightbox" href="img/lr_3.png">
+              <img class="img-responsive" src="img/lr_3.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Kitchen" data-toggle="lightbox" href="img/kitchen_01.png">
+              <img class="img-responsive" src="img/kitchen_01.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Master Bedroom" data-toggle="lightbox" href="img/br_1_01.png">
+              <img class="img-responsive" src="img/br_1_01.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Master Bedroom" data-toggle="lightbox" href="img/br_1_02.png">
+              <img class="img-responsive" src="img/br_1_02.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Green Bedroom" data-toggle="lightbox" href="img/br_2_01.png">
+              <img class="img-responsive" src="img/br_2_01.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Green Bedroom" data-toggle="lightbox" href="img/br_2_02.png">
+              <img class="img-responsive" src="img/br_2_02.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Green Bedroom" data-toggle="lightbox" href="img/br_2_03.png">
+              <img class="img-responsive" src="img/br_2_03.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_01.png">
+              <img class="img-responsive" src="img/br_3_01.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_02.png">
+              <img class="img-responsive" src="img/br_3_02.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_03.png">
+              <img class="img-responsive" src="img/br_3_03.png" alt="">
+          </a>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_04.png">
+              <img class="img-responsive" src="img/br_3_04.png" alt="">
+          </a>
+      </div>
+    </div><!-- /.container -->
+    <div class="container">
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2014 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
-
-    </div><!-- /.container -->
+    </div>
 
 
     <!-- Bootstrap core JavaScript
@@ -79,7 +140,15 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/ekko-lightbox.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
+    <!-- Delegate function for modal -->
+    <script>
+    $(document).delegate('*[data-toggle="lightbox"]', 'click', function(event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
+    }); 
+    </script>
   </body>
 </html>
