--- a/attractions.html
+++ b/attractions.html
@@ -28,8 +28,8 @@
           #map-canvas {
           margin-left: auto;
           margin-right: auto;
-          width: 400px;
-          height: 300px;
+          width: 90%;
+          height: 350px;
           background-color: #CCC;
         }
       }
