--- a/home.html
+++ b/home.html
@@ -95,7 +95,7 @@
     <div class="item active">
       <div class="">
         <div class="row text-center">
-            <img src="img/bailey_wide.png" alt="...">
+            <img src="img/living_room_wide.png" alt="...">
           </div>
         <div class="carousel-caption">
           <h1></h1>
