Added default marker for Evan's Lake

--- a/amenities.html
+++ b/amenities.html
@@ -74,11 +74,13 @@
         <li>Coffee Maker</li>
         <li>Toaster</li>
         <li>Dishes for Eight</li>
-        <li>Board Gaems and Cards</li>
+        <li>Board Games and Cards</li>
         <li>Weber Grill</li>
         <li>Bonfire Pit</li>
         <li>Water Softener</li>
         <li>Wi-Fi</li>
+      </ul>
+      <ul>
         <li>No smoking</li>
         <li>No pets</li>
       </ul>
