--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Carousel Template for Bootstrap</title>
+    <title>Evan's Lake Cottage - Gallery</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -66,63 +66,63 @@
     <div class="container">
       <h1>Gallery</h1>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Living Room" data-toggle="lightbox" href="img/lr_2.png">
-              <img class="img-responsive" src="img/lr_2.png" alt="">
+          <a class="thumbnail" data-title="Living Room" data-toggle="lightbox" href="img/lr_2.jpeg">
+              <img class="img-responsive" src="img/lr_2.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Living Room" data-toggle="lightbox" href="img/lr_3.png">
-              <img class="img-responsive" src="img/lr_3.png" alt="">
+          <a class="thumbnail" data-title="Living Room" data-toggle="lightbox" href="img/lr_3.jpeg">
+              <img class="img-responsive" src="img/lr_3.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Kitchen" data-toggle="lightbox" href="img/kitchen_01.png">
-              <img class="img-responsive" src="img/kitchen_01.png" alt="">
+          <a class="thumbnail" data-title="Kitchen" data-toggle="lightbox" href="img/kitchen_01.jpeg">
+              <img class="img-responsive" src="img/kitchen_01.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Master Bedroom" data-toggle="lightbox" href="img/br_1_01.png">
-              <img class="img-responsive" src="img/br_1_01.png" alt="">
+          <a class="thumbnail" data-title="Master Bedroom" data-toggle="lightbox" href="img/br_1_01.jpeg">
+              <img class="img-responsive" src="img/br_1_01.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Master Bedroom" data-toggle="lightbox" href="img/br_1_02.png">
-              <img class="img-responsive" src="img/br_1_02.png" alt="">
+          <a class="thumbnail" data-title="Master Bedroom" data-toggle="lightbox" href="img/br_1_02.jpeg">
+              <img class="img-responsive" src="img/br_1_02.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Green Bedroom" data-toggle="lightbox" href="img/br_2_01.png">
-              <img class="img-responsive" src="img/br_2_01.png" alt="">
+          <a class="thumbnail" data-title="Green Bedroom" data-toggle="lightbox" href="img/br_2_01.jpeg">
+              <img class="img-responsive" src="img/br_2_01.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Green Bedroom" data-toggle="lightbox" href="img/br_2_02.png">
-              <img class="img-responsive" src="img/br_2_02.png" alt="">
+          <a class="thumbnail" data-title="Green Bedroom" data-toggle="lightbox" href="img/br_2_02.jpeg">
+              <img class="img-responsive" src="img/br_2_02.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Green Bedroom" data-toggle="lightbox" href="img/br_2_03.png">
-              <img class="img-responsive" src="img/br_2_03.png" alt="">
+          <a class="thumbnail" data-title="Green Bedroom" data-toggle="lightbox" href="img/br_2_03.jpeg">
+              <img class="img-responsive" src="img/br_2_03.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_01.png">
-              <img class="img-responsive" src="img/br_3_01.png" alt="">
+          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_01.jpeg">
+              <img class="img-responsive" src="img/br_3_01.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_02.png">
-              <img class="img-responsive" src="img/br_3_02.png" alt="">
+          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_02.jpeg">
+              <img class="img-responsive" src="img/br_3_02.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_03.png">
-              <img class="img-responsive" src="img/br_3_03.png" alt="">
+          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_03.jpeg">
+              <img class="img-responsive" src="img/br_3_03.jpeg" alt="Image Not Found">
           </a>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_04.png">
-              <img class="img-responsive" src="img/br_3_04.png" alt="">
+          <a class="thumbnail" data-title="Black & White Bedroom" data-toggle="lightbox" href="img/br_3_04.jpeg">
+              <img class="img-responsive" src="img/br_3_04.jpeg" alt="Image Not Found">
           </a>
       </div>
     </div><!-- /.container -->
