--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
 		<div class="item">
 			<div class="">
 				<div class="row text-center">
-			  		<img src="img/bw_wide.png" alt="...">
+			  		<img src="img/bw_wide.jpeg" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
 			    <h3></h3>
@@ -85,7 +85,7 @@
 		<div class="item">
 			<div class="">
 				<div class="row text-center">
-			  		<img src="img/gbr_wide.png" alt="...">
+			  		<img src="img/gbr_wide.jpeg" alt="...">
 			  	</div>
 			  <div class="carousel-caption">
 			    <h3></h3>
@@ -95,7 +95,7 @@
     <div class="item active">
       <div class="">
         <div class="row text-center">
-            <img src="img/living_room_wide.png" alt="...">
+            <img src="img/living_room_wide.jpeg" alt="...">
           </div>
         <div class="carousel-caption">
           <h1></h1>
